# prefix-0501

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  VERSION_CONTROL.md
prefix-sharing/: AGENTS.md  README.md  pyproject.toml  requirements-ci.txt
prefix-sharing/prefix_sharing/: __init__.py  utils.py
prefix-sharing/prefix_sharing/backends/: __init__.py  base.py  batch_layout.py  block_causal_mask.py  factory.py  flash_atten_base.py  flash_atten_gpu.py  flash_atten_npu.py  flash_atten_npu_test.py  flash_atten_npu_tnd.py  flash_common.py  gpu_flash_attn.py  npu_flash_attn.py  packed_layout.py  torch_ref.py
prefix-sharing/prefix_sharing/core/: __init__.py  batch_trim.py  config.py  logprob.py  metadata.py  model_spec.py  observability.py  planner.py  prefix_detector.py  prefix_store.py
prefix-sharing/prefix_sharing/integrations/: __init__.py  context.py  megatron_attention.py  megatron_rope.py  megatron_runtime.py  parallel_info.py  patch_manager.py  precision_validator.py  two_pass_forward.py  utils.py  verl_attention.py  verl_mcore.py
prefix-sharing/prefix_sharing/setup/: __init__.py  compat_matrix.py  logged_patch.py  registry.py  runtime_adapters.py  version_guard.py
prefix-sharing/prefix_sharing/tools/: __init__.py  analyze.py  assemble_dump.py  cmp_baseline_cross_batch.py  cmp_baseline_within_batch.py  cmp_diag.py  cmp_diag_verl080.py  cmp_first_attn.py  compare_logprobs.py  diagnostic_dump.py  diagnostic_dump_verl080.py  dump_first_attn.py  fix_data_precision_check.json  inject_baseline_synthetic.py  inject_fixed_rollout.py  inject_synthetic_prefix.py  precision_validator.py  rollout_data.py  run_benchmark.sh  training_monitor.py
prefix-sharing/scripts/: smoke_test_gpu_flash.py
prefix-sharing/tests/: run_all_cuda_tests.py  run_deltanet.py  run_e2e.py  run_hybrid_attention.py  run_megatron_smoke.py  run_precision.py  run_qwen36_validation.py  test_gated_delta_net.py
prefix-sharing/tests/benchmark/: bench_backends.py  bench_prefix_sharing.py  bench_qwen36_realistic.py  bench_rl_workload.py  bench_tp.py
prefix-sharing/tests/integrated_test/: test_patch_integrations.py  (+1 more)
(+719 files in other folders)
